Added basic quadratic plotting from user input

--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
 </head>
 
 <body>
+    <label for="a">a = </label> 
+    <input type="number" id="a" value="0">
+    <label for="b">b = </label> 
+    <input type="number" id="b" value="0">
+    <label for="c">c = </label> 
+    <input type="number" id="c" value="0">
+    <input type="button" id="btn1" value="Submit">
+    Multiple: <input type="checkbox" id="multiple" onclick="checkMultiple()">
+
+    <p class="output" id="output1"></p>
+
     <div id="plot"></div>
-    <script type = "text/javascript" src="static_data.js"></script>
+    <!-- <script type = "text/javascript" src="static_data.js"></script> -->
+    <script type = "text/javascript" src="dyn_data.js"></script>
 </body>
